[package]
name = "customer"
version = "0.1.0"
authors = ["Tales Viegas <tales.viegas@ilegra.com>"]
edition = "2018"

[dependencies]
actix-web = "2.0"
actix-rt = "1.1.1"
serde = "1.0"
serde_json = "1.0"
pretty_env_logger = "0.4.0"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"]}
diesel = { version = "1.4.4", features = ["mysql", "r2d2"]}
dotenv = "0.15"